# widows_tts_mcp

./: README.md  pyproject.toml
windows_tts_mcp/: __init__.py  main.py
