[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "windows-tts-mcp"
version = "1.0.0"
description = "Windows TTS MCP Server for Claude Desktop using PowerShell"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9.2",
]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
keywords = ["tts", "text-to-speech", "mcp", "claude", "windows", "powershell"]

[project.urls]
Homepage = "https://github.com/yourusername/windows-tts-mcp"
Repository = "https://github.com/yourusername/windows-tts-mcp"

[project.scripts]
windows-tts-mcp = "windows_tts_mcp.main:main"
tts-dev = "windows_tts_mcp.main:dev_main"

[tool.uv]
dev-dependencies = []
